@@ -28,11 +28,12 @@ N - when we start, remove any entryguards that are listed in excludenodes.
 N - Remember the last time we saw one of our entry guards labelled with
     the GUARD flag. If it's been too long, it is not suitable for use.
     If it's been really too long, remove it from the list.
-  . Figure out avoiding duplicate /24 lines
+  o Figure out avoiding duplicate /24 lines
     o automatically add /16 servers to family
     D do it in an efficient way. keep a list of something somewhere?
-      - The right thing here is to revamp our node selection implementation.
-N   - make it configurable, so people can turn it on or off.
+      D The right thing here is to revamp our node selection implementation.
+        (Deferred until oprofile says this matters.)
+    o make it configurable, so people can turn it on or off.
 N - Clients stop dumping old descriptors if the network-statuses
     claim they're still valid.
 R . If we fail to connect via an exit enclave, (warn and) try again
