@@ -19,6 +19,10 @@ Changes in version 0.1.2.2-alpha - 2006-??-??
     - When asked to resolve a hostname, don't use non-exit servers unless
       requested to do so.  This allows servers with broken DNS to
       be useful to the network.
+    - Add an "EnforceDistinctSubnets" option to control our "exclude
+      servers on the same /16" behavior.  It's still on by default; this
+      is mostly for people who want to operate private test networks with
+      all the machines on the same subnet.
 
   o Security Fixes, minor:
     - If a client asked for a server by name, and we didn't have a
